# TheKit

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  dashboard.h  thekit3_pwm.c  thekitd2.py  thekitd3.c
ArduinoTheKit/: ArduinoTheKit.ino
pico_ethntp/: CMakeLists.txt  config.h  gps.c  gps_util.c  gps_util.h  log.h  lwipopts.h  ntp.h  ntp_client.c  ntp_common.c  ntp_server.c  pico_ethntp.c  pico_ethntp.h
pico_thekit_util/: CMakeLists.txt  base64.c  base64.h  gps_util.c  pcm.c
thekit2_pico/: CMakeLists.txt  base64.c  base64.h  common.c  common.h  pcm.c  pcm.h  thekit_pico.c  thekit_pico_w.c
thekit4_pico_w/: CMakeLists.txt  config.h  gps.c  gps_util.h  http_server.c  irq.c  light.c  log.h  lwipopts.h  ntp.c  ntp.h  ntp_client.c  ntp_common.c  ntp_server.c  tasks.c  temperature.c  thekit4_pico_w.c  thekit4_pico_w.h  wifi.c
thekit_receiver/: thekit_receiver.ino
thekitd/: Cargo.toml  thekit_alarm
thekitd/src/: main.rs
